--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "build": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "node server.js"
+    "dev": "node server.js",
+    "server": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
